--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Centered text -->
         <div class="centered-text">
             <h1>Welcome to Jessen Lifestyle</h1>
-            <p>Discover your way of life</p>
+            <p>Discover your way of lifet</p>
         </div>
     </div>
 
